--- a/ch07/集成学习.ipynb
+++ b/ch07/集成学习.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,18 @@
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.base import ClassifierMixin\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.externals import six\n",
+    "from sklearn.base import clone\n",
+    "from sklearn.pipeline import _name_estimators\n",
+    "import numpy as np\n",
+    "import operator\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "%matplotlib inline"
    ]
   },
@@ -97,6 +109,157 @@
    "metadata": {},
    "source": [
     "## 多数投票分类器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#基于类别预测概率的加权多数投票算法\n",
+    "class MajorityVoteClassifier(BaseEstimator, ClassifierMixin):\n",
+    "    '''A majority vote ensemble classifier\n",
+    "    Parameters\n",
+    "    ---------------\n",
+    "    classifiers: array-like, shape=[n_classifiers]\n",
+    "        Different classifiers for the ensemble\n",
+    "        \n",
+    "    vote: str, {'classlabel', 'probability'}\n",
+    "        Default: 'classlabel'\n",
+    "            If 'classlabel' the prediction is based on\n",
+    "            the argmax of class labels. Else if\n",
+    "            'probability', the argmax of the sum of\n",
+    "            probabilities is used to predict the class label\n",
+    "            (recommended for calibrated classifiers).\n",
+    "            \n",
+    "    weights: array-like, shape=[n_classifiers]\n",
+    "        Optional, default: None\n",
+    "            If a list of `int` or `float` values are\n",
+    "            provided, the classifiers are weighted by \n",
+    "            importance; Uses uniform weights if `weights=None`.\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, classifiers, vote='classlabel', weights=None):\n",
+    "        self.classifiers = classifiers\n",
+    "        #这个是什么\n",
+    "        self.named_classifiers = {key: value for key, value in _name_estimators(classifiers)}\n",
+    "        self.vote = vote\n",
+    "        self.weights = weights\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        '''Fit classifiers.\n",
+    "        Parameters\n",
+    "        --------------\n",
+    "        X : {array-like, sparse matrix},\n",
+    "            shape = [n_samples, n_features]\n",
+    "            Matrix of training samples.\n",
+    "            \n",
+    "        y : array-like, shape=[n_samples]\n",
+    "            Vector of target class labels.\n",
+    "            \n",
+    "        Returns\n",
+    "        --------------\n",
+    "        self: object\n",
+    "        '''\n",
+    "        #Use LabelEncoder to ensure class labels start\n",
+    "        #with 0, which is important for np.argmax\n",
+    "        #call in self.predict\n",
+    "        self.lablenc_ = LabelEncoder()\n",
+    "        self.lablenc_.fit(y)\n",
+    "        self.classes_ = self.lablenc_.classes_\n",
+    "        self.classifiers_ = []\n",
+    "        for clf in self.classifiers:\n",
+    "            fitted_clf = clone(clf).fit(X, self.lablenc_.transform(y))\n",
+    "            self.classifiers_.append(fitted_clf)\n",
+    "        return self\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        '''Predict class labels for X.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ---------------\n",
+    "        X : {array-like, sparse matrix},\n",
+    "            Shape = [n_samples, n_features]\n",
+    "            Matrix of training samples.\n",
+    "            \n",
+    "        Returns\n",
+    "        ---------------\n",
+    "        maj_vote : array-like, shape=[n_samples]\n",
+    "            Predicted class labels.\n",
+    "            \n",
+    "        '''\n",
+    "        if self.vote == 'probability':\n",
+    "            maj_vote = np.argmax(self.predict_proba(X), axis=1)\n",
+    "            \n",
+    "        else: #'classlabel' vote\n",
+    "            #Collect results form clf.predict calls\n",
+    "            predictions = np.asarray([clf.predict(X)\n",
+    "                                     for clf in self.classifiers_]).T\n",
+    "            maj_vote = np.apply_along_axis(lambda x: np.argmax(np.bincount(x, weights=self.weights)), axis=1, arr=predictions)\n",
+    "        maj_vote = self.lablenc_.inverse_transform(maj_vote)\n",
+    "        return maj_vote\n",
+    "    \n",
+    "    #返回平均概率\n",
+    "    def predict_proba(self, X):\n",
+    "        '''Predict class probabilities for X.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ---------------\n",
+    "        X : {array-like, Sparse matrix},\n",
+    "            shape=[n_samples, n_features]\n",
+    "            Training vectors, where n_samples is\n",
+    "            the number of samples and\n",
+    "            n_features is the number of features.\n",
+    "        Returns\n",
+    "        ----------------\n",
+    "        avg_proba: array-like,\n",
+    "            shape = [n_samples, n_classes]\n",
+    "            Weighted average probability for\n",
+    "            each class per sample.\n",
+    "        '''\n",
+    "        probas = np.asarray([clf.predict_proba(X)\n",
+    "                            for clf in self.classifiers_])\n",
+    "        avg_proba = np.average(probas, axis=0, weights=self.weights)\n",
+    "        return avg_proba\n",
+    "    \n",
+    "    def get_params(self, deep=True):\n",
+    "        '''Get classifier parameter names for GridSearch'''\n",
+    "        if not deep:\n",
+    "            return super(MajorityVoteClassifier, self).get_params(deep=False)\n",
+    "        else:\n",
+    "            out = self.named_classifiers.copy()\n",
+    "            for name, step in six.iteritems(self.named_classifiers):\n",
+    "                for key, value in six.iteritems(step.get_params(deep=True)):\n",
+    "                    out['%s__%s' % (name, key)] = value\n",
+    "            return out\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多数分类器说明：使用两个基类BaseEstimator和ClassifierMixin获取某些基本方法（set_params，get_params，score方法均来自这些基类）。导入six包从而使得MajorityVoteClassifier与Python2.7兼容。\n",
+    "predict_proba方法来返回平均概率，这在计算AUC时需要用到。\n",
+    "通过get_params方法来获取集成分类器中独立成员函数的参数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#读取数据集对多数分类器进行测试\n",
+    "iris = datasets.load_iris()\n",
+    "X, y = iris.data[50:, [1,2]], iris.target[50:]\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
    ]
   },
   {
