--- a/笔记/第七章 集成学习-组合不同的模型.md
+++ b/笔记/第七章 集成学习-组合不同的模型.md
@@ -26,3 +26,39 @@ $$
 
 ## 多数投票分类器
 
+多数投票法也称为堆叠(stacking)。不过，堆叠算法更典型地应用于组合逻辑斯蒂回归模型，以各独立分类器的输出作为输入，通过对这些输入结果的继承来预测最终的类标。
+
+## bagging——通过bootstrap样本构建集成分类器
+
+bagging没有使用相同的训练集拟合集成分类器中的单个成员分类器。
+
+### bootstrap抽样
+
+有放回的随机抽样。如下图所示，我们有7个不同的训练样例(使用索引1-7来表示)，在每一轮的bagging循环中，它们都被可放回随机抽样。
+
+## boosting
+
+提高弱学习机的性能。自适应Boosting——adaboost。
+
+**弱分类器**：分类性能稍好于随机猜测的分类器。典型的弱学习机例子就是单层决策树。
+
+Boosting主要针对难以区分的训练样本，也就是说，弱学习机通过在错误分类样本熵的学习来提高集成分类的性能。**与bagging不同，在boosting的初始化阶段，算法使用无放回抽样从训练样本中随机抽取一个子集**。原始的boosting过程可总结为如下四步骤：
+
+1. 从训练集D中以无放回抽样的方式随机抽取一个训练子集$d_1$,用于弱学习机$C_1$的训练
+2. 从训练集中以无放回抽样方式随机抽取第2个训练子集$d_2$,并将$C_1$中误分类样本的50%加入到训练集中，训练得到弱学习机$C_2$。
+3. 从训练集D中抽取$C_1$和$C_2$分类结果不一致的样本生成训练样本集$d_3$,以此训练第3个弱学习机$C_3$
+4. 通过多数投票组合三个弱学习机$C_1$,$C_2$和$C_3$
+
+### Adaboosting
+
+使用整个训练集来训练弱学习机，其中训练样本在每次迭代中都会重新被赋予一个权重，在上一弱学习机错误的基础上进行学习进而构建一个更加强大的分类器。
+
+以二分类为例，×表示向量的元素相乘，点号(.)表示两个向量的内积。算法步骤如下:
+
+1. 以等值方式为权重向量w赋值，其中$\sum_{i} w_i = 1$
+2. 在m轮boosting操作中，对第j轮做如下操作:
+3. 训练一个加权的弱学习机，$C_j = train(X,y,w)$
+4. 预测样本类标$\hat{y} = predict(C_j, X)$
+5. 计算权重错误率$\epsilon=W.(\hat{y}==y)$
+6. 计算相关系数:$a_j = 0.5\log \frac{1-\epsilon}{\epsilon}$
+7. 更新权重:
