--- a/笔记/第七章 集成学习-组合不同的模型.md
+++ b/笔记/第七章 集成学习-组合不同的模型.md
@@ -14,6 +14,14 @@
 
 多数投票原则是指将得票数超过50%的结果作为类标。严格来说，多数投票只适用于二分类情形。把多数投票原则推广到多分类，也叫作简单多数票法。
 
+在二分类中，假定class1=-1，class2=+1，我们可以将多数投票预测表示为:
+$$
+C(x) = sign(\sum_{j}^m C_j(x))
+$$
+即：当$\sum_j^m C_j(x) \geq 0$时，$C(x)=1$；当$\sum_j^m C_j(x)<0$时，$C(x)=-1$
+
+**证明集成方法的效果为何好于单个成员分类器：**
+
 假设二分类中的n个成员分类器都有相同的出错率$\epsilon$,且出错率之间是相互独立的，二分类的集成学习模型的出错率服从多项式分布：
 $$
 P(y \geq k) = \sum_{k}^{n} \langle \begin{matrix} n \\ k \end{matrix} \rangle \epsilon^k(1-\epsilon)^{n-k} = \epsilon_{ensemble}
@@ -27,6 +35,11 @@ $$
 ## 多数投票分类器
 
 多数投票法也称为堆叠(stacking)。不过，堆叠算法更典型地应用于组合逻辑斯蒂回归模型，以各独立分类器的输出作为输入，通过对这些输入结果的继承来预测最终的类标。
+
+- 预测信息为类标
+  - $\hat{y} = \arg \max \sum_{j=1}^m w_j \mathcal{X_A}(C_j(x)=i)$
+- 预测信息为类标概率
+  - $\hat{y} = \arg \max \sum_{j=1}^m w_j p_{ij}$
 
 ## bagging——通过bootstrap样本构建集成分类器
 
@@ -61,4 +74,6 @@ Boosting主要针对难以区分的训练样本，也就是说，弱学习机通
 4. 预测样本类标$\hat{y} = predict(C_j, X)$
 5. 计算权重错误率$\epsilon=W.(\hat{y}==y)$
 6. 计算相关系数:$a_j = 0.5\log \frac{1-\epsilon}{\epsilon}$
-7. 更新权重:
+7. 更新权重:$w:=w×exp(\alpha_j×\hat{y}×y)$
+8. 归一化权重，使其和为1：$w:=w/\sum w_i$
+9. 完成最终的预测
