--- a/ch08/情感分析.ipynb
+++ b/ch08/情感分析.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyprind\n",
     "import pandas as pd\n",
     "import os\n",
+    "import re\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import CountVectorizer #建立词袋模型\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer #把tf转成tf-idf"
+    "from sklearn.feature_extraction.text import TfidfTransformer #把tf转成tf-idf\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from nltk.stem.porter import PorterStemmer #词干提取\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +44,7 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:04:18\n"
+      "Total time elapsed: 00:04:31\n"
      ]
     }
    ],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +76,7 @@
        "(50000, 2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +154,7 @@
        "4  I saw this movie many years ago and it has nev...          1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +233,7 @@
        "2  One of the lamer wedding movies you'll see. Sm...          0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,6 +323,462 @@
    "metadata": {},
    "source": [
     "解读:单词is在第三个文档中只得到了一个相对较小的tf-idf(0.48)，这是由于第一和第二个文档中都包含单词is，因此它不太可能包含有用或是有辨识度的信息。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 清洗文本数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ents since the fall of the USSR should begin here.'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#经过重排后，数据集中第一个文档的最后50个字符\n",
+    "df.loc[0,'review'][-50:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**输出中包含HTML标记、标点符号以及其他非字母字符。这些字符并未包含很多有用的语义。但是有时标点符号可以在某些NLP语境中提供有用及附加信息。但是在这个例子中，我们将去除标点符号，保留标签符号，如\":)\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def preprocessor(text):\n",
+    "    text = re.sub('<[^>]*>','',text) #移除电影评论中所有的HTML标记\n",
+    "    emoticons = re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)', text) #匹配表情符号，并保存下来\n",
+    "    text = re.sub('[\\W]+',' ',text.lower())+''.join(emoticons).replace('-','')\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**后面会把保存下来的表情符号，追加到一个文档字符串后面，因为我们当前使用的是一元组模型，所有词序并不重要。**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ents since the fall of the ussr should begin here '"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor(df.loc[0,'review'][-50:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is a test :):(:)'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor(\"</a>This :) is :( a test :-)!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#使用preprocessor函数移除DataFrame中所有的电影评论信息\n",
+    "df['review'] = df['review'].apply(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 标记文档"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def tokenizer(text):\n",
+    "    return text.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['runners', 'like', 'running', 'and', 'thus', 'they', 'run']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer('runners like running and thus they run')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'runner', 'like', u'run', 'and', u'thu', 'they', 'run']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#进行词干提取\n",
+    "porter = PorterStemmer()\n",
+    "def  tokenizer_porter(text):\n",
+    "    return [porter.stem(word) for word in text.split()]\n",
+    "tokenizer_porter('runners like running and thus they run')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "词干提取会把单词回复到其原始形式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/parallels/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['runner', u'like', u'run', u'run', 'lot']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop = stopwords.words('english')\n",
+    "[w for w in tokenizer_porter('a runner likes running and runs a lot')[-10:] if w not in stop]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 训练用于文档分类的逻辑斯蒂回归模型\n",
+    "训练一个逻辑斯蒂回归模型以将电影评论划分为正面评价和负面评价"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train = df.loc[:25000,'review'].values\n",
+    "y_train = df.loc[:25000,'sentiment'].values\n",
+    "X_test = df.loc[25000:,'review'].values\n",
+    "y_test = df.loc[25000:, 'sentiment'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf = TfidfVectorizer(strip_accents=None,lowercase=False,preprocessor=None)\n",
+    "param_grid = [{'vect__ngram_range':[(1,1)],\n",
+    "              'vect__stop_words':[stop,None],\n",
+    "              'vect__tokenizer':[tokenizer, tokenizer_porter],\n",
+    "              'clf__penalty':['l1','l2'],\n",
+    "              'clf__C':[1.0,10.0,100.0]},\n",
+    "              {'vect__ngram_range':[(1,1)],\n",
+    "               'vect__stop_words':[stop,None],\n",
+    "               'vect__tokenizer':[tokenizer, tokenizer_porter],\n",
+    "               'vect__use_idf':[False],\n",
+    "               'vect__norm':[None],\n",
+    "               'clf__penalty':['l1','l2'],\n",
+    "               'clf__C':[1.0,10.0,100.0]}\n",
+    "             ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lr_tfidf = Pipeline([('vect',tfidf),('clf',LogisticRegression(random_state=0))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gs_lr_tfidf = GridSearchCV(lr_tfidf, param_grid, scoring='accuracy',cv=5,verbose=1,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed: 65.3min\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs_lr_tfidf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "网格搜索返回的最佳参数设置集合为:使用不含有停用词的常规标记生成器，同时在逻辑斯蒂回归中使用tf-idf，其中逻辑斯蒂回归分类器使用L2正则化，正则化强度C=10.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('CV Accuracy: %.3f' % gs_lr_tfidf.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('Test Accuracy: %.3f' % clf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用大数据——在线算法与外存学习\n",
+    "前面使用网格搜索进行调参时，计算成本太高。花费时间太长。但是，可以通过外存学习的技术来提高性能，应对大数据。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#定义一个生成器函数：stream_docs，每次读取且返回一个文档的内容\n",
+    "def stream_docs(path):\n",
+    "    with open(path,'r') as csv:\n",
+    "        next(csv)\n",
+    "        for line in csv:\n",
+    "            text, label=line[:-3], int(line[-2])\n",
+    "            yield text, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "next(stream_docs(path='./movie_data.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#定义一个get_minibatch函数，以stream_doc函数得到的文档数据流作为输入，并通过参数size返回指定数量的文档内容\n",
+    "def get_minibatch(doc_stream, size):\n",
+    "    docs ,y = [],[]\n",
+    "    try:\n",
+    "        for _ in range(size):\n",
+    "            text, label = next(doc_stream)\n",
+    "            docs.append(text)\n",
+    "            y.append(label)\n",
+    "    except StopIteration:\n",
+    "        return None, None\n",
+    "    return docs,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#MurmurHash3算法https://sites.google.com/site/murmurhash/,处理文本信息的向量处理器HashingVectorizer\n",
+    "vect = HashingVectorizer(decode_error='ignore',\n",
+    "                        n_features=2**21,\n",
+    "                        preprocessor=None,\n",
+    "                        tokenizer=tokenizer)\n",
+    "clf = SGDClassifier(loss='log',random_state=1, n_iter=1)\n",
+    "doc_stream = stream_docs(path='./movie_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pbar = pyprind.ProgBar(45)\n",
+    "classes = np.array([0,1])\n",
+    "for _ in range(45):\n",
+    "    X_train,y_train = get_minibatch(doc_stream, size=1000)\n",
+    "    if not X_train:\n",
+    "        break\n",
+    "    X_train = vect.transform(X_train)\n",
+    "    clf.partial_fit(X_train,y_train,classes=classes)\n",
+    "    pbar().update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_test,y_test = get_minibatch(doc_stream, size=5000)\n",
+    "X_test = vect.transform(X_test)\n",
+    "print('Accuracy: %.3f' % clf.score(X_test, y_test))"
    ]
   },
   {
