--- a/笔记/第八章 使用机器学习进行情感分析.md
+++ b/笔记/第八章 使用机器学习进行情感分析.md
@@ -45,3 +45,57 @@ $$
 $n_d$为文档的总数，$df(d,t)$为包含词汇t的文档d的数量。分母加1，用于保证没有出现在任何训练样本中的词汇情况下，分母不为0。取对数是为了保证文档中出现频率较低的词汇不会被赋予过大的权重。
 
 使用sklearn中的另外一个转换器:TfidfTransformer，它以CountVectorizer的原始词频作为输入，并将其转换为tf-idf。
+
+sklearn中idf和tf-idf的定义为:
+$$
+idf(t,d) = \log \frac{1+n_d}{1+df(d,t)} \\
+tf-idf(t,d) = tf(t,d)×(idf(t,d)+1)
+$$
+举例说明TfidfTransformer的工作方式，计算第三个文档中单词is的tf-idf：
+
+```
+    ['The sun is shining',
+    'The weather is sweet',
+    'The sun is shining and the weather is sweet']
+```
+
+在文档3(第三句话)中，单词is的词频是2(tf=2)，由于is在三个文档中都出现过，因此它的文档频率为3(df=3)。因此，idf的计算方法为:
+$$
+idf("is",d3) = \log \frac{1+3}{1+3} = 0 \\
+tf-idf("is",d3) = 2 × (0+1) = 2
+$$
+那么如果对文档3所有条目重复此过程，得到的tf-idf向量:[1.69,2.00,1.29,1.29,1.29,2.00,1.29]，最后还需要对tf-idf进行L2归一化。计算方式如下:
+$$
+\begin{align*}
+tf-idf("is",d3)_{norm} &= \frac{[1.69,2.00,1.29,1.29,1.29,2.00,1.29]}{\sqrt{1.69^2+2.00^2+1.29^2+1.29^2+1.29^2+2.00^2+1.29^2}} \\
+&= [0.40,0.48,0.31,0.31,0.31,0.48,0.31]
+\end{align*}
+$$
+
+### 清洗文本数据
+
+> 去除所有不需要的字符对文本数据进行清洗。这里使用正则表达式对不需要的字符进行匹配，然后把它移除。
+
+### 标记文档
+
+把文本词料拆分为单独的元素。
+
+1. 标记文档的一种常用方法就是通过文档的空白字符将其拆分为单独的单词。
+
+
+2. 另外一种有用的技术为"词干提取"(word stemming)。这里使用nltk中的porter stermming算法进行词干提取。(使单词恢复到原始形式，如running，最终为run)
+
+### 停用词移除(stop-word removal)
+
+停用词指的是在各种文本中太过常见，以致没有(或很少)含有用于区分文本所属类别的有用信息。
+
+### 使用大数据——在线算法与外存学习
+
+在对数据量非常大的数据集进行建模时，计算成本非常高。但是我们可以通过一种称为外存学习的技术来处理超大数据集。比如，随机梯度下降或小批量梯度下降。
+
+## 总结
+
+词袋模型虽然在文本分类领域最为流行，但是它没有考虑句子的结构和语法。一种流行的词袋模型扩展就是**潜狄利克雷分配(Latent Dirichlet Allocation)**，这是一种**考虑句子潜在语义的主题模型**。
+
+**word2vec**是最近提出的一种词袋模型的替代算法。**word2vec算法是基于神经网络的一种无监督算法**，它会自动尝试学习单词之间的关系。word2vec算法是基于神经网络的一种无监督算法，它会自动尝试学习单词之间的关系。word2vec背后的理念就是将词义相近的单词划分到相同的簇中；通过巧妙的向量间隔，此模型可以通过简单的向量计算来得到合适的单词。例如:king-man+woman=queen。[项目地址](https://code.google.com/p/word2vec)(这里可以找到模型原始的C语言实现、相关的论文及其替代实现代码)。
+
