--- a/ch08/情感分析.ipynb
+++ b/ch08/情感分析.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyprind\n",
@@ -44,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:04:31\n"
+      "Total time elapsed: 00:04:40\n"
      ]
     }
    ],
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,7 @@
        "2  One of the lamer wedding movies you'll see. Sm...          0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +347,7 @@
        "'ents since the fall of the USSR should begin here.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +397,7 @@
        "'ents since the fall of the ussr should begin here '"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +417,7 @@
        "'this is a test :):(:)'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +468,7 @@
        "['runners', 'like', 'running', 'and', 'thus', 'they', 'run']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +488,7 @@
        "[u'runner', 'like', u'run', 'and', u'thu', 'they', 'run']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +519,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /home/parallels/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -526,7 +528,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +548,7 @@
        "['runner', u'like', u'run', u'run', 'lot']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -580,8 +582,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(strip_accents=None,lowercase=False,preprocessor=None)\n",
@@ -602,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -613,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -638,7 +642,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed: 65.3min\n"
+      "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed: 60.8min\n",
+      "Exception in thread Thread-4:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 326, in _handle_workers\n",
+      "    pool._maintain_pool()\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 230, in _maintain_pool\n",
+      "    self._repopulate_pool()\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 223, in _repopulate_pool\n",
+      "    w.start()\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/process.py\", line 130, in start\n",
+      "    self._popen = Popen(self)\n",
+      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/forking.py\", line 121, in __init__\n",
+      "    self.pid = os.fork()\n",
+      "OSError: [Errno 12] Cannot allocate memory\n",
+      "\n"
      ]
     }
    ],
@@ -780,6 +802,31 @@
     "X_test = vect.transform(X_test)\n",
     "print('Accuracy: %.3f' % clf.score(X_test, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dest = os.path.join('moviecclassifier','pkl_objects')\n",
+    "if not os.path.exists(dest):\n",
+    "    os.makedirs(dest)\n",
+    "    \n",
+    "pickle.dump(stop,open(os.path.join(dest,'stopwords.pkl'),'wb'),protocol=4)\n",
+    "pickle.dump(clf,open(os.path.join(dest, 'classifier.pkl'),'wb'),protocal=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
