--- a/笔记/第八章 使用机器学习进行情感分析.md
+++ b/笔记/第八章 使用机器学习进行情感分析.md
@@ -99,3 +99,5 @@ $$
 
 **word2vec**是最近提出的一种词袋模型的替代算法。**word2vec算法是基于神经网络的一种无监督算法**，它会自动尝试学习单词之间的关系。word2vec算法是基于神经网络的一种无监督算法，它会自动尝试学习单词之间的关系。word2vec背后的理念就是将词义相近的单词划分到相同的簇中；通过巧妙的向量间隔，此模型可以通过简单的向量计算来得到合适的单词。例如:king-man+woman=queen。[项目地址](https://code.google.com/p/word2vec)(这里可以找到模型原始的C语言实现、相关的论文及其替代实现代码)。
 
+## 数据集链接
+
