--- a/ch08/情感分析.ipynb
+++ b/ch08/情感分析.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -13,6 +13,7 @@
     "import os\n",
     "import re\n",
     "import numpy as np\n",
+    "import pickle\n",
     "from sklearn.feature_extraction.text import CountVectorizer #建立词袋模型\n",
     "from sklearn.feature_extraction.text import TfidfTransformer #把tf转成tf-idf\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -46,7 +47,7 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:04:40\n"
+      "Total time elapsed: 00:04:15\n"
      ]
     }
    ],
@@ -581,14 +582,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "tfidf = TfidfVectorizer(strip_accents=None,lowercase=False,preprocessor=None)\n",
     "param_grid = [{'vect__ngram_range':[(1,1)],\n",
     "              'vect__stop_words':[stop,None],\n",
     "              'vect__tokenizer':[tokenizer, tokenizer_porter],\n",
@@ -606,66 +604,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "lr_tfidf = Pipeline([('vect',tfidf),('clf',LogisticRegression(random_state=0))])"
+    "tfidf = TfidfVectorizer(strip_accents=None,lowercase=False,preprocessor=None,tokenizer=tokenizer,ngram_range=(1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "lr_tfidf = Pipeline([('vect',tfidf),('clf',LogisticRegression(C=10,penalty='l2',random_state=0))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "gs_lr_tfidf = GridSearchCV(lr_tfidf, param_grid, scoring='accuracy',cv=5,verbose=1,n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed: 60.8min\n",
-      "Exception in thread Thread-4:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/threading.py\", line 754, in run\n",
-      "    self.__target(*self.__args, **self.__kwargs)\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 326, in _handle_workers\n",
-      "    pool._maintain_pool()\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 230, in _maintain_pool\n",
-      "    self._repopulate_pool()\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/pool.py\", line 223, in _repopulate_pool\n",
-      "    w.start()\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/process.py\", line 130, in start\n",
-      "    self._popen = Popen(self)\n",
-      "  File \"/home/parallels/anaconda2/lib/python2.7/multiprocessing/forking.py\", line 121, in __init__\n",
-      "    self.pid = os.fork()\n",
-      "OSError: [Errno 12] Cannot allocate memory\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('vect', TfidfVectorizer(analyzer=u'word', binary=False, decode_error=u'strict',\n",
+       "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input=u'content',\n",
+       "        lowercase=False, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), norm=u'l2', preprocessor=None, smooth_idf=Tru...nalty='l2', random_state=0, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gs_lr_tfidf.fit(X_train, y_train)"
+    "lr_tfidf.fit(X_train, y_train)"
    ]
   },
   {
@@ -676,25 +665,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "print('CV Accuracy: %.3f' % gs_lr_tfidf.best_score_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.898\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Test Accuracy: %.3f' % clf.score(X_test, y_test))"
+    "print('Test Accuracy: %.3f' % lr_tfidf.score(X_test, y_test))"
    ]
   },
   {
@@ -707,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -724,18 +717,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\"A funny and scathing critique of Russian society and culture during the transition from communism, OKNO V PARIZH also shows the west in an unfavorable light. A group of Russians living in St. Petersburg (a.k.a. Peter the Great\\'s \"\"window on the west\"\") find a magic portal that instantly transports them to Paris. Mamin\\'s film is truly hilarious, and just \"\"weird\"\" enough constantly keep even the jaded film viewer on his toes. The songs, the dream sequences, and the deliciously disgusting fringes of society from both cultures mingle to create a memorable and meaningful film. Anyone trying to understand the shift in Russian cultural sentiments since the fall of the USSR should begin here.\"',\n",
+       " 1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "next(stream_docs(path='./movie_data.csv'))"
+    "next(stream_docs(path='data/movie_data.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -765,19 +768,25 @@
     "#MurmurHash3算法https://sites.google.com/site/murmurhash/,处理文本信息的向量处理器HashingVectorizer\n",
     "vect = HashingVectorizer(decode_error='ignore',\n",
     "                        n_features=2**21,\n",
-    "                        preprocessor=None,\n",
     "                        tokenizer=tokenizer)\n",
     "clf = SGDClassifier(loss='log',random_state=1, n_iter=1)\n",
-    "doc_stream = stream_docs(path='./movie_data.csv')"
+    "doc_stream = stream_docs(path='data/movie_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0% [##############################] 100% | ETA: 00:00:00\n",
+      "Total time elapsed: 00:00:13\n"
+     ]
+    }
+   ],
    "source": [
     "pbar = pyprind.ProgBar(45)\n",
     "classes = np.array([0,1])\n",
@@ -787,46 +796,42 @@
     "        break\n",
     "    X_train = vect.transform(X_train)\n",
     "    clf.partial_fit(X_train,y_train,classes=classes)\n",
-    "    pbar().update()"
+    "    pbar.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.820\n"
+     ]
+    }
+   ],
    "source": [
     "X_test,y_test = get_minibatch(doc_stream, size=5000)\n",
+    "\n",
     "X_test = vect.transform(X_test)\n",
     "print('Accuracy: %.3f' % clf.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dest = os.path.join('moviecclassifier','pkl_objects')\n",
     "if not os.path.exists(dest):\n",
     "    os.makedirs(dest)\n",
     "    \n",
-    "pickle.dump(stop,open(os.path.join(dest,'stopwords.pkl'),'wb'),protocol=4)\n",
-    "pickle.dump(clf,open(os.path.join(dest, 'classifier.pkl'),'wb'),protocal=4)"
+    "pickle.dump(stop,open(os.path.join(dest,'stopwords.pkl'),'wb'),protocol=2)\n",
+    "pickle.dump(clf,open(os.path.join(dest, 'classifier.pkl'),'wb'),protocol=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
