--- a/笔记/第十一章聚类分析—处理无类标数据.md
+++ b/笔记/第十一章聚类分析—处理无类标数据.md
@@ -11,3 +11,52 @@
 ## 使用k-means算法对相似对象进行分组
 
 聚类(或称为聚类分析)是一种可以找到相似对象群组的技术，与组间对象相比，组内对象之间具有更高的相似度。
+
+k-means算法是**基于原型的聚类**，易于实现，且具有很高的计算效率。基于原型的聚类意味着每个簇都对应一个原型，它可以是一些具有连续型特征的**相似点的中心点(centroid)(平均值)**，或者是类别特征情况下**相似点的众数(medoid)**——最典型或是出现频率最高的点。虽然k-means算法可以高效识别球型簇，但是此算法的**缺点在于必须事先指定先验的簇数量k**。**如果k值选择不当，则可能导致聚类效果不佳**。
+
+后面我们可以通过**肘(elbow)方法**和**轮廓图(silhouette plot)方法**，它们可以**用来评估聚类效果，并帮助我们选出最优k值**。
+
+K-means算法的四个步骤:
+
+1. 从样本点中随机选择k个点作为初始簇中心
+2. 将每个样本点划分到距离它最近的中心店$\mu^i$，$j \in {1,\dots,k}$所代表的簇中。
+3. 用各簇中所有样本的中心点替代原有的中心点。
+4. 重复步骤2和3，直到中心店不变或者达到预定迭代次数时，算法终止
+
+**面临的问题**:如何度量对象之间的相似性?我们可以将相似性定义为距离的倒数，在m维空间中，对于特征取值为连续型实数的聚类分析来说，常用的距离度量标准是欧几里得距离的平方:
+$$
+d(x,y)^2 = \sum_{j=1}^{m}(x_j-y_j)^2=\|x-y\|_2^2
+$$
+基于欧几里得度量标准，我们可以将k-means算法描述为一个简单的优化问题:通过迭代使得簇内误差平方和(SSE)最小，也称作簇惯性。
+$$
+SSE = \sum_{i=1}^{n}\sum_{j=1}^{k}w^{(i,j)}=\|x^i-\mu^i\|_2^2
+$$
+其中，$\mu^j$为簇j的中心点，如果样本$x^i$属于簇j，则有$w^{(i,j)}=1$,否则$w^{(i,j)}=0$。
+
+> 模型训练的过程中，**可能会发生无法收敛的情况**，特别是当我们设置了较大的max_iter值时，更有可能产生此类问题。**解决收敛问题的一个方法**就是为tol参数设置一个较大的值，此参数控制对簇内误差平方和的容忍度，此容忍度用于判定算法是否收敛。
+
+###k-means++
+
+k-means算法是使用随机点来作为初始中心点，若初始中心点选择不当，有可能会**导致簇效果不佳或产生收敛速度慢等问题**。解决此问题的**一种方案就是在数据集上多次运行k-means算法，并根据误差平方和(SSE)选择性能最好的模型**。**另一种方案就是使用k-means++算法让初始中心点彼此尽可能远离，相比传统k-means算法，它能够产生更好、更一致的结果**。
+
+k-means++算法的初始化过程如下:
+
+1. 初始化一个空的集合M，用于存储选定的k个中心点
+2. 从输入样本中随机选定第一个中心点$\mu^j$，并将其加入到集合M中
+3. 对于集合M之外的任一样本点$x^i$，通过计算找到与其平台距离最小的样本$d(x^i,M)^2$
+4. 使用加权概率分布$\frac{d(\mu^p,M)^2}{\sum_id(x^i,M)^2}$来随机选择下一个中心点$\mu^p$
+5. 重复步骤2,3,直到选定k个中心点
+6. 基于选定的中心点执行k-means算法
+
+**k-means算法还有另一个问题，就是一个或多个簇的结果为空**。但是**k-medoids**或者**模糊C-means**算法中不存在这种问题。
+
+> 空簇问题在sklearn中存在，如果某个簇为空，算法将搜索距离空簇中心点最远的样本，最后将此最远样本点作为中心点。
+
+
+
+**注意:当使用欧几里得距离作为度量标准将k-means算法应用到真实的数据中时，需要进行特征缩放。**
+
+k-means的缺点之一就是指定簇数量k。尤其当面对的是一个无法可视化展现的高维数据集时，这个缺点更加明显。k-means另一个特点就是**簇不可重叠**，也**不可分层**，并且**假定每个簇至少会有一个样本**。
+
+### 硬聚类和软聚类
+
